--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#achievements">ACHIEVEMENTS</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="./assets/img/Saksham_CV.pdf">DOWNLOAD PDF</a></li>
             </ul>
         </div>
     </nav>
@@ -76,13 +77,7 @@
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Persistent Systems Ltd. ,Pune</h3>
                         <div class="subheading mb-3">Summer Internship</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel totam unde laudantium, ullam
-                            harum qui dicta distinctio dolorem nisi veniam, voluptate quibusdam ex cupiditate ea
-                            temporibus reiciendis quo deleniti similique architecto esse repellendus consequatur
-                            quaerat? Hic rem distinctio cumque ut tempora numquam, modi placeat maxime fuga perspiciatis
-                            consectetur veniam recusandae. Soluta unde vero explicabo blanditiis, voluptate sit culpa
-                            repellendus laboriosam veniam sed impedit saepe natus qui corporis optio consequuntur
-                            distinctio nulla omnis ipsam autem. Accusantium, culpa. Quisquam labore saepe perspiciatis?
+                        <p>Project Martians is an internship program for 8 weeks with Persistent system LTD. wherein, I got through certain identified fundamental topics and specific technology related trainings.
                         </p>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">June 2021 - Present</span></div>
@@ -91,22 +86,15 @@
                     <div class="flex-grow-1">
                         <h3 class="mb-0">The Sparks Foundation, Singapore</h3>
                         <div class="subheading mb-3">Web Development Internship</div>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia ut expedita ab, officiis
-                            sint accusantium maiores aliquam voluptate incidunt earum voluptates, laboriosam sit
-                            obcaecati, rerum ipsum nostrum veniam dolore eveniet minus fuga dolorum quibusdam optio
-                            minima. Quisquam, iusto totam, recusandae aspernatur ea soluta dicta voluptas sint unde
-                            maiores culpa. Ipsa!</p>
+                        <p>Successfully Developed a BASIC BANKING SYSTEM using HTML5, CSS3, PHP and MySQL DB and hosted on Heroku Cloud Platform.</p>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">May 2021</span></div>
                 </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Sun Kranti Energy Private Ltd. ,Nagpur</h3>
-                        <div class="subheading mb-3">Production Internship Trainee</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia deleniti eos ullam beatae,
-                            aliquam facere cum laborum unde. Aspernatur, voluptatem veniam explicabo omnis porro
-                            accusamus vitae qui in nobis reiciendis totam beatae nulla, quo consequuntur sit aperiam
-                            incidunt iure corrupti officia. Libero iste aliquid harum nisi a modi! Deleniti, ipsa.</p>
+                        <div class="subheading mb-3">Production Internship Trainee - Production of Solar Street Lighting System</div>
+                        <p>Trained under Senior Production Engineer about types of Solar Lights and their Production in the industry.</p>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">February 2021</span></div>
                 </div>
@@ -200,47 +188,25 @@
         </section>
         <hr class="m-0" />
         <!-- Awards-->
-        <section class="resume-section" id="awards">
+        <section class="resume-section" id="achievements">
             <div class="resume-section-content">
-                <h2 class="mb-5">Awards & Certifications</h2>
+                <h2 class="mb-5">Achievements</h2>
                 <ul class="fa-ul mb-0">
                     <li>
                         <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                        Lorem ipsum dolor sit amet.
+                        Earner a Silver Medal Certification in NPTEL Course: The Joy of Computing using Python. <br> Score – 82%
                     </li>
                     <li>
                         <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                        Lorem ipsum dolor sit amet.
+                        Cleared the qualification round of TECHGIG CODE GLADIATORD 2021.
                     </li>
                     <li>
                         <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                        1
-                        <sup>st</sup>
-                        Lorem ipsum dolor sit amet.
+                        Training in Loco Shed, Ajni on Traction systems.
                     </li>
                     <li>
                         <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                        1
-                        <sup>st</sup>
-                        Lorem ipsum dolor sit amet.
-                    </li>
-                    <li>
-                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                        2
-                        <sup>nd</sup>
-                        Lorem ipsum dolor sit amet.
-                    </li>
-                    <li>
-                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                        1
-                        <sup>st</sup>
-                        Lorem ipsum dolor sit amet.
-                    </li>
-                    <li>
-                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                        3
-                        <sup>rd</sup>
-                        Lorem ipsum dolor sit amet.
+                        Participated in IIRS Outreach Programme by ISRO.
                     </li>
                 </ul>
             </div>
