--- a/index.html
+++ b/index.html
@@ -182,8 +182,13 @@
         <section class="resume-section" id="interests">
             <div class="resume-section-content">
                 <h2 class="mb-5">Interests</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem ipsa inventore totam ipsum sunt numquam similique, facilis dolores rerum quam mollitia amet, quasi magnam voluptate. Aliquam nobis neque alias sint. Modi dignissimos ab maiores atque illo, praesentium sit voluptatum cupiditate. Placeat voluptas iusto ratione nulla libero sapiente recusandae nobis est.</p>
-                <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea porro fugiat nemo accusantium est voluptate alias voluptatem quae ratione numquam perferendis ipsum magni commodi rem, cupiditate aspernatur autem eum suscipit.</p>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">Listening Music</li>
+                    <li class="list-group-item">Technology Enthusiast</li>
+                    <li class="list-group-item">Website Design-Development</li>
+                    <li class="list-group-item">Watching Movies</li>
+                    <li class="list-group-item">Video-Games</li>
+                  </ul>
             </div>
         </section>
         <hr class="m-0" />
